# api.yaml
@@ -8,8 +8,8 @@ info:
   license:
     name: Apache 2.0
     url: 'http://apache.org/'
-host: api.eduaafric.com  # Replace with your actual host
-basePath: /                # Base path for all API endpoints
+host: localhost:9000
+basePath: /               
 schemes:
   - http
   - https
@@ -109,6 +109,200 @@ paths:
       responses:
         200: 
           description: OTP verified Account acitvated
+        400:
+          description: User error
+        500: 
+          description: Server error
+  
+  /api/aiChat/aiChat:
+    post:
+      summary: Chat With AI Zara (AI conversation bot)
+      description: Zara EduAfric AI assistant
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - message
+            properties:
+              message:
+                type: string
+      responses:
+        200: 
+          description: AI response
+        400:
+          description: User error
+        500: 
+          description: Server error
+  
+  /api/course/newCourse:
+    post:
+      summary: Endpoint to create new course details by instructors
+      description: token is required 
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - title
+              - about 
+              - desc 
+              - overview 
+              - category 
+              - price 
+              - isDiscountAllowed 
+              - discountPercentage 
+              - coverImage 
+              - studentLevel 
+              - skillsToGain 
+              - language
+            properties:
+              title:
+                type: string (required)
+              about:
+                type: string (required)
+              desc:
+                type: string (optional)
+              overview:
+                type: string (required)
+              category:
+                type: array (required at least one)
+              price:
+                type: number (required)
+              isDiscountAllowed:
+                type: boolean (optional)
+              discountPercentage:
+                type: number (optional)
+              coverImage:
+                type: file (required)
+              studentLevel:
+                type: string (required, ['Beginner', 'Intermediate', 'Advanced'])
+              skillsToGain:
+                type: array (required at least one)
+              language:
+                type: string (required)
+      responses:
+        201: 
+          description: Cousre created successfull
+        400:
+          description: User error
+        500: 
+          description: Server error
+  
+  /api/course/updateCourse:
+    post:
+      summary: Endpoint to update a course details by instructors
+      description: token is required 
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - title
+              - about 
+              - desc 
+              - overview 
+              - category 
+              - price 
+              - isDiscountAllowed 
+              - discountPercentage 
+              - coverImage 
+              - studentLevel 
+              - skillsToGain 
+              - language
+            properties:
+              title:
+                type: string
+              about:
+                type: string
+              desc:
+                type: string
+              overview:
+                type: string
+              category:
+                type: array
+              price:
+                type: number
+              isDiscountAllowed:
+                type: boolean
+              discountPercentage:
+                type: number
+              coverImage:
+                type: file
+              studentLevel:
+                type: string (['Beginner', 'Intermediate', 'Advanced'])
+              skillsToGain:
+                type: array
+              language:
+                type: string
+      responses:
+        200: 
+          description: Cousre updated successfull
+        400:
+          description: User error
+        500: 
+          description: Server error
+
+  /api/course/getAllCourse:
+    get:
+      summary: Fetch all courses from database
+      description: Fetch all courses from database
+      responses:
+        200: 
+          description: successful 
+        400:
+          description: User error
+        500: 
+          description: Server error
+
+  /api/course/getAllCourseCategories:
+    get:
+      summary: Fetch all courses categories from database
+      description: Fetch all courses categories from database
+      responses:
+        200: 
+          description: successful 
+        400:
+          description: User error
+        500: 
+          description: Server error
+
+  /api/course/getCourseByCategory/:category:
+    get:
+      summary: Fetch all courses by categories from database
+      description: Fetch all courses by categories from database
+      responses:
+        200: 
+          description: successful 
+        400:
+          description: User error
+        500: 
+          description: Server error
+
+  /api/course/getCourse:
+    get:
+      summary: Fetch single course by Id from database
+      description: Fetch single course by Id from database
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - _id
+            properties:
+              _id(required):
+                type: string
+      responses:
+        200: 
+          description: successful 
         400:
           description: User error
         500: 
