# routes/course.routes.js
@@ -6,10 +6,13 @@ const router = express.Router()
 router.post('/newCourse', controllers.newCourse )
 router.post('/updateCourse', controllers.updateCourse )
 router.post('/newCategory', controllers.newCategory )
+router.post('/updateCategory', controllers.updateCategory )
+
 
 
 //GET ROUTES
 router.get('/getAllCourse', controllers.getAllCourse)
+router.get('/getCourse', controllers.getCourse)
 router.get('/getAllCourseCategories', controllers.getAllCourseCategories)
 router.get('/getCourseByCategory/:category', controllers.getCourseByCategory)
 router.get('/getCourseByParams/:param', controllers.getCourseByParams)
